--- a/crq_frontend/core/templates/core/cadastro.html
+++ b/crq_frontend/core/templates/core/cadastro.html
@@ -1,36 +1,150 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <title>Cadastro</title>
+    <meta charset="UTF-8">
+    <title>Cadastros</title>
 </head>
 <body>
-    <h2>Cadastro</h2>
-    {% if error %}
-      <p style="color: red;">{{ error }}</p>
+    <h2>Lista de Cadastros</h2>
+
+    {% if messages %}
+        {% for message in messages %}
+            <p style="color: red;">{{ message }}</p>
+        {% endfor %}
     {% endif %}
-    <form method="post">
+
+    <table border="1">
+        <tr>
+            <th>Nome</th>
+            <th>CPF</th>
+            <th>Email</th>
+        </tr>
+        {% for cadastro in cadastros %}
+        <tr>
+            <td>{{ cadastro.nome_completo }}</td>
+            <td>{{ cadastro.cpf }}</td>
+            <td>{{ cadastro.email }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+
+    <h3>Cadastrar Novo</h3>
+    <form method="POST" action="{% url 'cadastro' %}">
         {% csrf_token %}
-        <label for="nome">Nome:</label>
-        <input type="text" name="nome" required>
-        <br>
+        <label for="nome_completo">Nome Completo:</label>
+        <input type="text" id="nome_completo_cadastro" name="nome_completo" required><br>
+
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" name="cpf" required><br>
+
+        <label for="telefone">Telefone:</label>
+        <input type="text" id="telefone_cadastro" name="telefone" required><br>
 
         <label for="email">Email:</label>
-        <input type="email" name="email" required>
-        <br>
+        <input type="email" id="email_cadastro" name="email" required><br>
 
-        <label for="tipo_usuario">Tipo de Usuário:</label>
-        <select name="tipo_usuario" id="tipo_usuario" required>
-            <option value="ADM">ADM</option>
-            <option value="USER">USER</option>
-        </select>
-        <br>
+        <label for="estado">Estado:</label>
+        <input type="text" id="estado_cadastro" name="estado" required><br>
 
-        <label for="senha">Senha:</label>
-        <input type="password" name="senha" required>
-        <br>
+        <label for="bairro">Bairro:</label>
+        <input type="text" id="bairro_cadastro" name="bairro" required><br>
+
+        <label for="sexo">Sexo:</label>
+        <input type="text" id="sexo_cadastro" name="sexo" required><br>
+
+        <label for="idade">Idade:</label>
+        <input type="number" id="idade_cadastro" name="idade" required><br>
+
+        <label for="assunto">Assunto:</label>
+        <input type="text" id="assunto_cadastro" name="assunto" required><br>
+
+        <label for="metodologia">Metodologia:</label>
+        <input type="text" id="metodologia_cadastro" name="metodologia" required><br>
+
+        <label for="cliente">Cliente:</label>
+        <input type="text" id="cliente_cadastro" name="cliente" required><br>
+
+        <label for="classe_social">Classe Social:</label>
+        <input type="text" id="classe_social_cadastro" name="classe_social" required><br>
+
+        <label for="ocupacao">Ocupação:</label>
+        <input type="text" id="ocupacao_cadastro" name="ocupacao" required><br>
+
+        <label for="nome_recrutador">Nome Recrutador:</label>
+        <input type="text" id="nome_recrutador_cadastro" name="nome_recrutador" required><br>
+
+        <label for="digitador">Digitador:</label>
+        <input type="text" id="digitador_cadastro" name="digitador" required><br>
 
         <button type="submit">Cadastrar</button>
     </form>
-    <p>Já tem conta? <a href="{% url 'login' %}">Faça login</a></p>
+
+    <h3>Buscar Cadastro por CPF</h3>
+    <form method="GET" action="{% url 'cadastro' %}">
+        <label for="cpf_buscar">CPF:</label>
+        <input type="text" id="cpf_buscar" name="cpf" required>
+        <button type="submit">Buscar</button>
+    </form>
+
+    <h3>Atualizar Cadastro</h3>
+    <form method="POST" action="{% url 'cadastro' cpf=cadastro.cpf %}">
+        {% csrf_token %}
+        <label for="cpf_atualizar">CPF:</label>
+        <input type="text" id="cpf_atualizar" name="cpf" value="{{ cadastro.cpf }}" required><br>
+
+        <label for="nome_completo">Nome Completo:</label>
+        <input type="text" id="nome_completo" name="nome_completo" value="{{ cadastro.nome_completo }}"><br>
+
+        <label for="telefone">Telefone:</label>
+        <input type="text" id="telefone" name="telefone" value="{{ cadastro.telefone }}"><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" value="{{ cadastro.email }}"><br>
+
+        <label for="estado">Estado:</label>
+        <input type="text" id="estado" name="estado" value="{{ cadastro.estado }}"><br>
+
+        <label for="bairro">Bairro:</label>
+        <input type="text" id="bairro" name="bairro" value="{{ cadastro.bairro }}"><br>
+
+        <label for="sexo">Sexo:</label>
+        <input type="text" id="sexo" name="sexo" value="{{ cadastro.sexo }}"><br>
+
+        <label for="idade">Idade:</label>
+        <input type="number" id="idade" name="idade" value="{{ cadastro.idade }}"><br>
+
+        <label for="assunto">Assunto:</label>
+        <input type="text" id="assunto" name="assunto" value="{{ cadastro.assunto }}"><br>
+
+        <label for="metodologia">Metodologia:</label>
+        <input type="text" id="metodologia" name="metodologia" value="{{ cadastro.metodologia }}"><br>
+
+        <label for="cliente">Cliente:</label>
+        <input type="text" id="cliente" name="cliente" value="{{ cadastro.cliente }}"><br>
+
+        <label for="classe_social">Classe Social:</label>
+        <input type="text" id="classe_social" name="classe_social" value="{{ cadastro.classe_social }}"><br>
+
+        <label for="ocupacao">Ocupação:</label>
+        <input type="text" id="ocupacao" name="ocupacao" value="{{ cadastro.ocupacao }}"><br>
+
+        <label for="nome_recrutador">Nome Recrutador:</label>
+        <input type="text" id="nome_recrutador" name="nome_recrutador" value="{{ cadastro.nome_recrutador }}"><br>
+
+        <label for="digitador">Digitador:</label>
+        <input type="text" id="digitador" name="digitador" value="{{ cadastro.digitador }}"><br>
+
+        <button type="submit">Atualizar</button>
+    </form>
+
+    <h3>Excluir Cadastro por CPF</h3>
+    <form method="POST" action="{% url 'cadastro' cpf=cadastro.cpf %}">
+        {% csrf_token %}
+        <label for="cpf_deletar">CPF:</label>
+        <input type="text" id="cpf_deletar" name="cpf" value="{{ cadastro.cpf }}" required><br>
+        <button type="submit">Excluir</button>
+    </form>
+
+    <a href="{% url 'logout' %}">Sair</a>
 </body>
 </html>
