--- a/crq_frontend/core/templates/core/login.html
+++ b/crq_frontend/core/templates/core/login.html
@@ -18,6 +18,6 @@
         <br>
         <button type="submit">Entrar</button>
     </form>
-    <p>Não tem conta? <a href="{% url 'cadastro' %}">Cadastre-se</a></p>
+    <p>Não tem conta? <a href="{% url 'register' %}">Criar Conta</a></p>
 </body>
 </html>
