--- a/crq_frontend/core/templates/core/login.html
+++ b/crq_frontend/core/templates/core/login.html
@@ -1,23 +1,37 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+    <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <h2>Login</h2>
-    {% if error %}
-      <p style="color: red;">{{ error }}</p>
-    {% endif %}
-    <form method="post">
-        {% csrf_token %}
-        <label for="email">Email:</label>
-        <input type="email" name="email" required>
-        <br>
-        <label for="senha">Senha:</label>
-        <input type="password" name="senha" required>
-        <br>
-        <button type="submit">Entrar</button>
-    </form>
-    <p>Não tem conta? <a href="{% url 'register' %}">Criar Conta</a></p>
+    <div class="login-container">
+        <h2>Login</h2>
+
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <label for="email">Email:</label>
+            <input type="email" name="email" required><br>
+
+            <label for="senha">Senha:</label>
+            <input type="password" name="senha" required><br>
+
+            <button type="submit">Entrar</button>
+        </form>
+
+        <p class="registro-link">Não tem conta? <a href="{% url 'register' %}">Criar Conta</a></p>
+    </div>
 </body>
 </html>
