--- a/crq_frontend/core/templates/core/register.html
+++ b/crq_frontend/core/templates/core/register.html
@@ -1,36 +1,45 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <title>Register</title>
+    <meta charset="UTF-8">
+    <title>Registro</title>
+    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
 </head>
 <body>
-    <h2>Register</h2>
-    {% if error %}
-      <p style="color: red;">{{ error }}</p>
-    {% endif %}
-    <form method="post">
-        {% csrf_token %}
-        <label for="nome">Nome:</label>
-        <input type="text" name="nome" required>
-        <br>
+    <div class="login-container">
+        <h2>Criar Conta</h2>
 
-        <label for="email">Email:</label>
-        <input type="email" name="email" required>
-        <br>
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
 
-        <label for="tipo_usuario">Tipo de Usuário:</label>
-        <select name="tipo_usuario" id="tipo_usuario" required>
-            <option value="ADM">ADM</option>
-            <option value="USER">USER</option>
-        </select>
-        <br>
+        <form method="post" action="{% url 'register' %}">
+            {% csrf_token %}
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome" required><br>
 
-        <label for="senha">Senha:</label>
-        <input type="password" name="senha" required>
-        <br>
+            <label for="email">Email:</label>
+            <input type="email" name="email" required><br>
 
-        <button type="submit">Registrar Conta</button>
-    </form>
-    <p>Já tem conta? <a href="{% url 'login' %}">Faça login</a></p>
+            <label for="tipo_usuario">Tipo de Usuário:</label>
+            <select name="tipo_usuario" required>
+                <option value="" disabled selected>Selecione</option>
+                <option value="ADM">ADM</option>
+                <option value="User">User</option>
+            </select><br>
+
+            <label for="senha">Senha:</label>
+            <input type="password" name="senha" required><br>
+
+            <button type="submit">Registrar</button>
+        </form>
+
+        <p class="registro-link">Já tem uma conta? <a href="{% url 'login' %}">Fazer Login</a></p>
+    </div>
 </body>
 </html>
