Inicio do CSS estilização

--- a/crq_frontend/core/templates/core/register.html
+++ b/crq_frontend/core/templates/core/register.html
@@ -5,41 +5,41 @@
     <meta charset="UTF-8">
     <title>Registro</title>
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="login-container">
-        <h2>Criar Conta</h2>
+    <div class="auth-page">
+        <div class="auth-container">
+            <h1>Criar Conta</h1>
 
-        {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                    <li>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
+            {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
 
-        <form method="post" action="{% url 'register' %}">
-            {% csrf_token %}
-            <label for="nome">Nome:</label>
-            <input type="text" name="nome" required><br>
+            <form method="post" action="{% url 'register' %}">
+                {% csrf_token %}
 
-            <label for="email">Email:</label>
-            <input type="email" name="email" required><br>
+                <label for="nome">Nome:</label>
+                <input type="text" name="nome" required>
 
-            <label for="tipo_usuario">Tipo de Usuário:</label>
-            <select name="tipo_usuario" required>
-                <option value="" disabled selected>Selecione</option>
-                <option value="ADM">ADM</option>
-                <option value="User">User</option>
-            </select><br>
+                <label for="email">Email:</label>
+                <input type="email" name="email" required>
 
-            <label for="senha">Senha:</label>
-            <input type="password" name="senha" required><br>
+                <label for="cpf">CPF:</label>
+                <input type="text" name="cpf" required>
 
-            <button type="submit">Registrar</button>
-        </form>
+                <label for="senha">Senha:</label>
+                <input type="password" name="senha" required>
 
-        <p class="registro-link">Já tem uma conta? <a href="{% url 'login' %}">Fazer Login</a></p>
+                <button type="submit">Registrar</button>
+            </form>
+
+            <p class="registro-link">Já tem uma conta? <a href="{% url 'login' %}">Fazer Login</a></p>
+        </div>
     </div>
 </body>
 </html>
